fix link z-index bug

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ a {
     text-decoration: none;
     position: relative;
     transition: all .2s ease;
+    z-index: 1;
 }
 
 a:after {
